# my-flake-templates

./: .pre-commit-config.yaml  README.md  flake.nix
.github/: dependabot.yaml
.github/workflows/: ci-pre-commit.yaml  template-check.yaml
common/: _update.sh  flake.nix
common/files/: .git-commit-template  .pre-commit-config.yaml  taskfile.yaml
common/files/.github/: dependabot.yaml
common/files/.github/workflows/: ci-pre-commit.yaml  ci-tests-all.yaml
templates/base-with-flake/: .gitignore  README.md  flake.nix
templates/base-with-flake/.github/workflows/: ci-pre-commit.yaml
templates/golang-gomod/: .gitignore  .pre-commit-config.yaml  flake.nix
templates/python-poetry/: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  taskfile.yaml
templates/python-poetry/.github/workflows/: ci-tests-all.yaml
